# nix-haskell-multi-package

./: cabal.nix  cabal.project  default.nix  hie.yaml  nixpkgs.nix  shell.nix
tt1/: tt1.cabal
tt1/src/: Hello1.hs
tt2/: tt2.cabal
tt2/src/: Hello2.hs
tta/: tta.cabal
tta/src/: Main.hs
