Name:                tt2
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         TT 2
tested-with:         GHC == 8.6.5

library
  exposed-modules:     Hello2
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:                   
  build-depends:       base >= 4.6 && < 5
  ghc-options: -Wall -fno-warn-orphans -Wredundant-constraints