Name:                tta
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         TT All
tested-with:         GHC == 8.6.5

executable tta
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:   OverloadedStrings
                        , DeriveGeneric
  build-depends:       base >= 4.6 && < 5,
                       tt1,
                       tt2 
  ghc-options: -Wall -threaded